<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.karoldabrowski.quiz.MainActivity">

    <ImageView
        android:src="@drawable/bg2"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:text="@string/quiz_header"
        android:id="@+id/header"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/header_top_margin"
        android:layout_marginBottom="@dimen/header_bottom_margin"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textSize="@dimen/header_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:id="@+id/main_menu"
        android:gravity="center_horizontal"
        android:layout_below="@id/header">

        <Button
            android:text="@string/new_game_button"
            android:textSize="@dimen/button_text_size"
            android:textColor="@android:color/white"
            android:minWidth="@dimen/button_min_width"
            android:padding="@dimen/button_padding"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:background="@drawable/buttonshape"
            android:id="@+id/new_game_button"
            android:onClick="starNewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/quit_button"
            android:textColor="@android:color/white"
            android:onClick="quitGame"
            android:textSize="@dimen/button_text_size"
            android:minWidth="@dimen/button_min_width"
            android:padding="@dimen/button_padding"
            android:background="@drawable/buttonshape"
            android:layout_below="@id/new_game_button"
            android:id="@+id/quit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>

