<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.karoldabrowski.quiz.MainActivity">

    <ImageView
        android:src="@drawable/bg2"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:text="@string/quiz_header"
        android:id="@+id/header"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/header_top_margin"
        android:layout_marginBottom="@dimen/header_bottom_margin"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textSize="@dimen/header_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/game_section"
        android:gravity="center_horizontal"
        android:layout_below="@id/header"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/your_score_header"
            android:layout_marginLeft="@dimen/game_section_margins"
            android:layout_marginRight="@dimen/game_section_margins"
            android:textAlignment="center"
            android:minWidth="@dimen/button_min_width"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/result_header_margin_bottom"
            android:textSize="@dimen/result_header_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/score_text_view"
            android:layout_marginLeft="@dimen/game_section_margins"
            android:layout_marginRight="@dimen/game_section_margins"
            android:textAlignment="center"
            android:minWidth="@dimen/button_min_width"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/result_score_margin_bottom"
            android:textSize="@dimen/result_score_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:text="@string/back_to_menu_button_text"
        android:id="@+id/back_to_menu_button"
        android:onClick="backToMenu"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/back_to_menu_button_margin_top"
        android:textSize="@dimen/button_text_size"
        android:padding="@dimen/button_padding"
        android:background="@drawable/buttonshape"
        android:layout_below="@id/game_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>

